# zero-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/zero_agent/: __init__.py  config.py  main.py  settings.py
src/zero_agent/agent/: __init__.py  context.py  factory.py  service.py  types.py
src/zero_agent/agent/tools/: __init__.py  web_search.py
src/zero_agent/command/: __init__.py  base.py  router.py
src/zero_agent/command/handlers/: __init__.py  help.py  lang.py  reset.py
src/zero_agent/gateway/: __init__.py  base_adapter.py  inbound.py  outbound.py  protocol.py  registry.py  runner.py  wecom_adapter.py
src/zero_agent/i18n/: __init__.py  service.py
src/zero_agent/i18n/locales/: en.yaml  zh.yaml
src/zero_agent/observability/: __init__.py  callbacks.py  context.py  setup.py
src/zero_agent/runner/: __init__.py  app.py  dispatcher.py  lifecycle.py
src/zero_agent/session/: __init__.py  checkpoint.py  models.py  registry.py  store.py
tests/: __init__.py  test_dependencies.py
tests/agent/: helpers.py  test_factory.py  test_service.py
tests/command/: test_help.py  test_lang.py  test_reset.py  test_router.py
tests/gateway/: test_outbound.py  test_protocol.py  test_registry.py  test_wecom_session.py
tests/i18n/: test_i18n.py
tests/integration/: test_pipeline.py
tests/observability/: test_callbacks.py  test_context.py  test_setup.py
tests/runner/: test_dispatcher.py  test_dispatcher_context.py  test_lifecycle.py
tests/session/: helpers.py  test_checkpoint.py  test_expire.py  test_models.py  test_registry.py  test_reset.py  test_settings_storage.py
