[project]
name = "zero-agent"
version = "0.1.0"
description = "A Python agent framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Dong Realm", email = "dongrealm@163.com" }
]
dependencies = [
    "aiosqlite>=0.21.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "wecom-aibot-python-sdk>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
]

[project.scripts]
zero = "zero_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zero_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
src=["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["zero_agent"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["aibot", "aibot.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=zero_agent --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
